@@ -7,6 +7,8 @@ like other regular Maven dependencies.
 
 ## Why
 
+### Motivation
+
 A typical way of using the Java Compiler API is to rely on the presence of such
 API in the Java VM that runs the code requiring it.
 
@@ -19,7 +21,58 @@ Since the Compiler API is licensed as GPLv2+Classpath-Exception, let's make it
 a separate component that we can use regardless of what's available in the
 current VM.
 
+### Benefits
+
+With this standalone compiler, you can rely on all Java 11 javac features to be available,
+even when using newer Java versions.
+
+Specifically, this is allows you to:
+
+- compile code even if your Java environment isn't a full JDK
+- target Java 1.7 for compilation without any warnings or restrictions.
+- use the Compiler Tree API without resorting to `--add-opens` trickery that may eventually fail
+  in newer Java releases
+
+### Examples
+
+See this [jsweet fork](https://github.com/kohlschutter/jsweet), where we make exhaustive use of
+the Compiler Tree API.
+
 ## How
+
+### Usage
+
+First, add the following Maven dependency to your project:
+
+```xml
+    <dependency>
+        <groupId>com.kohlschutter.jdk.compiler</groupId>
+        <artifactId>standalone-jdk11</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+```
+
+If your project is modularized, also add the following statements to your `module-info.java`:
+
+```
+  requires standalone.jdk.compiler;
+  requires com.kohlschutter.jdk.standaloneutil;
+```
+
+This gives you access to all `com.sun.tools.*` and `com.sun.source.*` packages.
+
+Then change your code to use `standalone.com.sun.`... instead of `com.sun.`..., for example
+use `standalone.com.sun.tools.javac.api.JavacTool` instead of `com.sun.tools.javac.api.JavacTool`.
+
+If you use `javax.tools.ToolProvider.getSystemJavaCompiler()`, use our own version of it instead:
+`com.kohlschutter.jdk.standaloneutil.ToolProvider.getSystemJavaCompiler()` (or just change the
+`import` statement).
+
+The standalone compiler uses its own copies for both `lib/modules` contents as well as `lib/ct.sym`
+from a recent JDK 11 java home directory, which is automatically included via the
+`com.kohlschutter.jdk:standalone-home` dependency.
+
+### Project setup and structure
 
 The code in this repository relies on copies of the "jdk.compiler" code
 obtained from Java JDKs. That code is in a separate repository, and added as
